# phfibre

./: .gitignore  .gitmodules  CITATION.cff  Cargo.toml  LICENSE  README.md
src/: cross_check.rs  cross_check_vbootstrap.rs  data_structures.rs  facet_pipeline.rs  facets.rs  facets_old.rs  intervals_and_ordinals.rs  lib.rs  main.rs  matrix_operations.rs  permutation_test.rs  phfibre.rs  pipelines.rs  rank_calculations.rs  roots.rs  simplex.rs  utilities.rs
src/hasse_strategy/: compute_vertex_only.rs  mod.rs  pipeline_vertex_only.rs
src/polytope/: differential.rs  faces.rs  intersection.rs  mod.rs  nerve.rs  object_def.rs
src/polytopes/: mod.rs  polytope.rs  polytope_differential.rs  polytope_faces.rs  polytope_intersection.rs  polytopes.rs
