[package]
name = "phfibre"
version = "0.1.0"
authors = ["Jacob Leygonie, Gregory Henselman-Petruse <greg.henselman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solar = { path = "/Users/gh10/a/c/l/r/solar" }
num = "0.4.0"
num-traits = "0.2.14"
ordered-float = "2.7.0"
itertools = "0.10.0"
rand = "0.8.3"
auto_impl = "0.4.1"
# indicatif = "0.16.2"
# exhact = { path = "/Users/gh10/a/c/pr/xh/r/git" }